Release v0.1.5
-----------
Not released

Additions:
- Added ability to control the size of the tag type for tagged unions.
    - `union #tag_type u8`

Removals:

Changes:

Bugfixes:
- Fixed bug in `json.encode` that caused arrays of structures to not be outputted correctly.
- Fixed bug in `onyx pkg` that caused `onyx pkg new` to not work as intended.



Release v0.1.4
-----------
22nd June 2023

Additions:

Removals:
- Deprecated `map.get_opt`.
    - This is unnecessary with the new semantics of `map.get`.

Changes:
- `onyx pkg` now stores synchronized packages in a different folder hierarchy.
    - This is a transparent change so long as you use the `lib/packages.onyx` file.
- `Map` implementation no longer holds a default value. Instead, it returns an optional from `map.get`.
    - This is a significant breaking change that will affect many programs.

Bugfixes:
- Fixed a bug that made relative imports not always relative to the current file.
    - This may break some programs that were accidentally using this "feature".
- Fixed a bug with small a `union` over small data types, such as booleans.
    - There was an alignment issue, which caused the union to be smaller than expected.


Release v0.1.3
-----------
19th June 2023

Additions:
- New syntax for declaring quoted code blocks.
    - `[captures] { body }` for blocks.
    - `[captures] ( expr )` for expressions.
- User-level stack trace.
    - Enable with `--stack-trace`
    - Use `runtime.info.get_stack_trace()` to get the current stack trace.
    - Used in assertions and heap allocator for better error reporting
- `Optional.with` for running a block of code with the value in an Optional, if one is present.
- `-Dvariable=value` command line option to add symbols to the `runtime.vars` package.
- `--no-type-info` command line option to omit type information from the binary.
- `Allocator.move`. Moves a value into an allocator, returning a pointer to it.
    - This is a copy operation (and might be renamed later)