@@ -36,6 +36,7 @@ Supports_Networking :: false
 Supports_Type_Info :: true
 Supports_Threads :: true
 Supports_Env_Vars :: true
+Supports_Futexes :: false
 
 
 __output_string :: (s: str) -> u32 {
