@@ -54,14 +54,8 @@ mutex_lock :: (m: &Mutex) {
     while __atomic_cmpxchg(&m.lock, 0, 1) == 1 {
         if m.owner == context.thread_id do return;
 
-        #if runtime.Wait_Notify_Available {
-            // @ThreadingCleanup // You cannot wait on the main thread in
-            // a web browser, for kind of obvious reasons. However, this
-            // makes waiting for a mutex expensive because the only option
-            // is to do a spin-lock. Ugh.
-            if context.thread_id != 0 {
-                __atomic_wait(&m.lock, 1);
-            }
+        #if runtime.platform.Supports_Futexes {
+            runtime.platform.__futex_wait(&m.lock, 1, -1);
         } else {
             while (m.lock == 1) ---
         }
@@ -81,8 +75,8 @@ mutex_unlock :: (m: &Mutex) {
     m.owner = -1;
     __atomic_store(&m.lock, 0);
 
-    #if runtime.Wait_Notify_Available {
-        __atomic_notify(&m.lock, maximum = 1);
+    #if runtime.platform.Supports_Futexes {
+        runtime.platform.__futex_wake(&m.lock, 1);
     }
 }
 
