@@ -100,6 +100,59 @@ ONYX_DEF(__random_get, (WASM_PTR, WASM_I32), ()) {
 }
 
 
+ONYX_DEF(__futex_wait, (WASM_PTR, WASM_I32, WASM_I32), (WASM_I32)) {
+    int *addr = ONYX_PTR(params->data[0].of.i32);
+
+    #ifdef _BH_LINUX
+    struct timespec delay;
+
+    struct timespec *t = NULL;
+    if (params->data[2].of.i32 >= 0) {
+        delay.tv_sec  = params->data[2].of.i32 / 1000;
+        delay.tv_nsec = params->data[2].of.i32 * 1000000;
+        t = &delay;
+    }
+
+    int res = syscall(SYS_futex, addr, FUTEX_WAIT, params->data[1].of.i32, t, NULL, 0);
+
+    if (res == 0) {
+        if (*addr == params->data[1].of.i32) results->data[0] = WASM_I32_VAL(0);
+        else                                 results->data[0] = WASM_I32_VAL(1);
+    }
+    if (res == -1) {
+        if (errno == EAGAIN) results->data[0] = WASM_I32_VAL(2);
+        else                 results->data[0] = WASM_I32_VAL(1);
+    }
+    #endif
+
+    #ifdef _BH_WINDOWS
+    results->data[0] = WaitOnAddress(addr, &params->data[1].of.i32, 4, params->data[2].of.i32);
+    #endif
+
+    return NULL;
+}
+
+ONYX_DEF(__futex_wake, (WASM_PTR, WASM_I32), (WASM_I32)) {
+    int *addr = ONYX_PTR(params->data[0].of.i32);
+
+    #ifdef _BH_LINUX
+    int res = syscall(SYS_futex, addr, FUTEX_WAKE, params->data[1].of.i32, NULL, NULL, 0);
+
+    results->data[0] = WASM_I32_VAL(res);
+    #endif
+
+    #ifdef _BH_WINDOWS
+    for (int i=0; i<params->data[1].of.i32; i++) {
+        WakeByAddressSingle(addr);
+    }
+
+    results->data[0] = WASM_I32_VAL(params->data[1].of.i32);
+    #endif
+
+    return NULL;
+}
+
+
 
 #ifdef _BH_LINUX
 static wasm_func_t *wasm_cleanup_func;
